v0.9.1
-------------------
! year was screwed up when movie title contained "()"
! method rating() did not return any value on subsequent calls (only on the first)

v0.9.0 (06.01.2008)
-------------------
! link to SearchPlotWriters was pointing to wrong server
+ added gzip support to cache (Jörg Eitemüller)
+ added support for tv series (Jörg Eitemüller) - new methods:
  episodes() and seasons()
! fixed bug concerning genre parsing
+ added support for retrieving the movie quotes - method: quotes()

v0.8.9 (07.10.2007)
-------------------
* genre and country often contained a stupid additional field pointing to some
  "Imdb sections". Changed the code so they are no longer there.
! Link in "user comments" now points to the correct *site* (site info was missing
  so this always pointed to the local host)
* taglines() no longer returns the "update form" as latest tagline
! if the IMDB page contained no genre or country info, the concerning function
  caused an php error (strpos(): Offset not contained in string)
! cache purge caused errors when cache directory contained subdirs - fixed.

v0.8.8 (05.08.2007)
-------------------
* applied patch sent by eremini to also support BMP images
* IMDB site changes again
* moved documentation files to doc/ dir and added APIDOC there

v0.8.7 (10.03.2007)
-------------------
+ made the maxresults (max movies to return on query) configurable
+ made the search variants configurable
+ added some more info for the APIDOC
* made the sample scripts proof for register_globals=off

v0.8.6 (23.02.2007)
-------------------
+ plot outline and selected user comment added (wtf)
* next changes on IMDB site: Fixed rating and cast (Izzy)
! alsoknow() sometimes throw an error (and ate some AKAs). Fixed (Izzy)
+ sample page now gives some more details (Izzy)
! fixed the link to ratings generated in the votes() function (eremini)

v0.8.5 (22.01.2007)
-------------------
* some adjustments due to changes on the IMDB sites